<resources>
    <string name="app_name">PhysicsUI</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="physics">Physics</string>
    <string name="ui">UI</string>
    <string name="filipe">Filipe Abrantes</string>
    <string name="will">Will Bailey</string>
    <string name="springs">Springs</string>
    <string name="really_versatile">Really versatile</string>
    <string name="they_feel_nice">They <u>feel</u> nice!</string>
    <string name="theory">Theory</string>
    <string name="quote_hookes_law">\"<b>Hooke\'s Law</b>: the force F needed to extend or compress a spring by some distance X is proportional to that distance.\"</string>
    <string name="quote_damping">\"<b>Damping</b> is an influence within or upon an oscillatory system that has the effect of reducing, restricting or preventing its oscillations. In physical systems, damping is produced by processes that dissipate the energy stored in the oscillation.\"</string>
    <string name="bounciness">Bounciness</string>
    <string name="speed">Speed</string>
    <string name="demo">Demo</string>
    <string name="stiffness_k">Stiffness\n(Tension)\n(k)</string>
    <string name="damping_c">Damping\n(Friction)\n(c)</string>
    <string name="bounciness_zeta">Bounciness\n(1 - ζ)</string>
    <string name="speed_freq">Speed\n(ω)</string>
    <string name="impl">Implementation</string>
    <string name="interpolator">Interpolator</string>
    <string name="simulator">Simulator</string>
    <string name="android_integration">(Unsure about this whole topic) \n \n How to integrate with Android? \n LayoutParams \n View helpers/extensions \n Custom layouts</string>
</resources>
