<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/springs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text.SlideTitle"
        android:text="@string/springs"/>

    <TextView
        android:id="@+id/reason1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textStyle="italic"
        style="@style/Text.SlideHeader2"
        android:text="@string/really_versatile"/>

    <TextView
        android:id="@+id/reason2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textStyle="italic"
        style="@style/Text.SlideHeader2"
        android:text="@string/they_feel_nice"/>

</LinearLayout>
