<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/title_part_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.SlideTitle"
                android:text="@string/physics"/>

            <Space
                android:id="@+id/title_space"
                android:layout_width="6dp"
                android:layout_height="6dp"/>

            <TextView
                android:id="@+id/title_part_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.SlideTitle"
                android:background="?attr/colorPrimary"
                android:text="@string/ui"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_below="@id/title"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/author_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/Text.SlideAuthor"
                android:text="@string/filipe"/>

            <TextView
                android:id="@+id/author_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/Text.SlideAuthor"
                android:text="@string/will"/>

        </LinearLayout>

    </RelativeLayout>
    
</RelativeLayout>
